--- a/AdminIncludes/category-edit.html
+++ b/AdminIncludes/category-edit.html
@@ -1,40 +1,44 @@
-<div class="form-container">
-{form name="view.create"}
-    <form action="{url path="/admin/view/add/$category_id"}" method="POST" {form_enctype form=$form}>
-        {form_hidden_fields form=$form}
-        {form_field form=$form field="success_url"}
-            <input type="hidden" name="{$name}" value="{url path="/admin/categories/update?category_id=$category_id&current_tab=modules"}">
-        {/form_field}
-        {form_field form=$form field="view"}
-            <div class="form-group {if $error}has-error{/if}">
-                <label for="{$label_attr.for}" class="control-label">
-                    {$label} :
-                </label>
-                <select id="{$label_attr.for}" required="required" name="{$name}" class="submit-on-change form-control">
-				{loop type="view" name="viewselected" source="category" source_id="{$category_id}"}
-					value="{{$VIEW}}"
-					   <option value="{$VIEW}">{$VIEW}</option>
-					{/loop}
-					{elseloop rel="viewselected"}
-					 value="{$value}"
-					   <option value="{$value}">{$value}</option>
-					{/elseloop}
-					
-                   {loop type="frontfiles" name="translate-fo-template" template-active="{config key="active-front-template"}"}
-                       <option value="{$NAME}" >{$NAME}</option>
-                   {/loop}
-               </select>
-            </div>
-        {/form_field}
-        {form_field form=$form field="source"}
-            <input type="hidden" name="{$name}" value="category">
-        {/form_field}
-        {form_field form=$form field="source_id"}
-            <input type="hidden" name="{$name}" value="{$category_id}">
-        {/form_field}
-        <div class="form-group">
-            <button type="submit" name="save_mode" value="stay" class="form-submit-button btn btn-sm btn-default btn-success" title="{intl l='Save'}">{intl l='Save'} <span class="glyphicon glyphicon-ok"></span></button>
-        </div>
-    </form>
-{/form}
+<div class="general-block-decorator">
+	<div class="row">
+   	 	<div class="col-md-12">
+			{form name="view.create"}
+			    <form action="{url path="/admin/view/add/$category_id"}" method="POST" {form_enctype form=$form}>
+			        {form_hidden_fields form=$form}
+			        {form_field form=$form field="success_url"}
+			            <input type="hidden" name="{$name}" value="{url path="/admin/categories/update?category_id=$category_id&current_tab=modules"}">
+			        {/form_field}
+			        {form_field form=$form field="view"}
+			            <div class="form-group {if $error}has-error{/if}">
+			                <label for="{$label_attr.for}" class="control-label">
+			                    {$label} :
+			                </label>
+			                <select id="{$label_attr.for}" required="required" name="{$name}" class="submit-on-change form-control">
+							{loop type="view" name="viewselected" source="category" source_id="{$category_id}"}
+								value="{{$VIEW}}"
+								   <option value="{$VIEW}">{$VIEW}</option>
+								{/loop}
+								{elseloop rel="viewselected"}
+								 value="{$value}"
+								   <option value="{$value}">{$value}</option>
+								{/elseloop}
+								
+			                   {loop type="frontfiles" name="translate-fo-template" template-active="{config key="active-front-template"}"}
+			                       <option value="{$NAME}" >{$NAME}</option>
+			                   {/loop}
+			               </select>
+			            </div>
+			        {/form_field}
+			        {form_field form=$form field="source"}
+			            <input type="hidden" name="{$name}" value="category">
+			        {/form_field}
+			        {form_field form=$form field="source_id"}
+			            <input type="hidden" name="{$name}" value="{$category_id}">
+			        {/form_field}
+			        <div class="form-group">
+			            <button type="submit" name="save_mode" value="stay" class="form-submit-button btn btn-sm btn-default btn-success" title="{intl l='Save'}">{intl l='Save'} <span class="glyphicon glyphicon-ok"></span></button>
+			        </div>
+			    </form>
+			{/form}
+		</div>
+	</div>
 </div>
